--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.3",
     "angular": "^1.6.4",
+    "angular-resource": "^1.6.6",
     "es6-promise": "^4.1.0",
     "oclazyload": "^1.1.0"
   }
