--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Angularjs es6 webpack seed",
   "main": "index.js",
   "scripts": {
@@ -11,46 +11,37 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^7.1.5",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.2.1",
-    "babel-preset-stage-2": "^6.22.0",
+    "autoprefixer": "^7.1.6",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-2": "^6.24.1",
     "connect-history-api-fallback": "^1.4.0",
-    "copy-webpack-plugin": "^4.1.1",
-    "css-loader": "^0.28.1",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-html": "^2.0.3",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-node": "^4.2.2",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "copy-webpack-plugin": "^4.2.0",
+    "css-loader": "^0.28.7",
     "express": "^4.16.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.4",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.4",
-    "optimize-css-assets-webpack-plugin": "^1.3.2",
-    "rimraf": "^2.6.1",
-    "style-loader": "^0.17.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-dev-server": "^2.9.2",
-    "webpack-hot-middleware": "^2.18.0",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.8.1",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.20.0",
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "@uirouter/angularjs": "^1.0.3",
-    "angular": "^1.6.4",
+    "@uirouter/angularjs": "^1.0.10",
+    "angular": "^1.6.6",
     "angular-resource": "^1.6.6",
-    "es6-promise": "^4.1.0",
+    "babel-polyfill": "^6.26.0",
     "oclazyload": "^1.1.0"
   }
 }
