--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -20,6 +21,8 @@
     "connect-history-api-fallback": "^1.4.0",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
+    "eslint": "^4.10.0",
+    "eslint-plugin-html": "^3.2.2",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
