--- a/package.json
+++ b/package.json
@@ -43,8 +43,12 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.10",
     "angular": "^1.6.6",
+    "angular-i18n": "^1.6.6",
     "angular-resource": "^1.6.6",
+    "angular-sanitize": "^1.6.6",
+    "angular-ui-bootstrap": "^2.5.6",
     "babel-polyfill": "^6.26.0",
+    "bootstrap": "^3.3.7",
     "oclazyload": "^1.1.0"
   }
 }
