--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.10",
     "angular": "^1.6.6",
+    "angular-animate": "^1.6.6",
     "angular-i18n": "^1.6.6",
     "angular-resource": "^1.6.6",
     "angular-sanitize": "^1.6.6",
