--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Angularjs es6 webpack seed",
   "main": "index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "css-loader": "^0.28.7",
     "eslint": "^4.10.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.2.2",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
@@ -37,6 +38,7 @@
     "http-proxy-middleware": "^0.17.4",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.19.0",
