--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Angularjs es6 webpack seed",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.config.js",
+    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.config",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist && webpack --progress --colors --config build/webpack.prod.config"
   },
